<resources>
    <string name="app_name">Final Project</string>
    <string name="btn_add_food">Add Food</string>
    <string name="description">Description</string>
    <string name="sweetness_0_10">Sweetness (0-10)</string>
    <string name="saltiness_0_10">Saltiness (0-10)</string>
    <string name="sourness_0_10">Sourness (0-10)</string>
    <string name="bitterness_0_10">Bitterness (0-10)</string>
    <string name="umami_savoryness_0_10">Umami/Savoryness (0-10)</string>
    <string name="lbl_description">Description</string>
    <string name="lbl_Name">Name</string>
    <string name="lbl_CountryOfOrigin">Country Of Origin</string>
    <string name="lbl_spicy">Spicy</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_delete">DELETE</string>
    <string name="delete_task">Delete Food</string>
    <string name="confirm_delete">Are you sure you want to delete this food?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="btn_add_food_list">Add Food List</string>
    <string name="date">Date</string>
    <string name="list_name">List Name</string>
    <string name="created_date">Created Date:</string>
    <string name="last_updated_date">Last Updated Date</string>
</resources>